# klondike-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  klondike-ui.md
.circleci/: config.yml
src/: display.rs  engine.rs  error.rs  game.rs  lib.rs  main.rs  terminal.rs  utils.rs
src/display/: blank.rs  bounds.rs  card.rs  coords.rs  error.rs  format_str.rs  frame.rs  game.rs  geometry.rs  help.rs  mod.rs  selector.rs  stack.rs  widget.rs  win.rs
src/display/stack/: common.rs  horizontal.rs  mod.rs  selector.rs  vertical.rs
src/game/: card.rs  deck.rs  game.rs  mod.rs  stack.rs
src/game/game/: area.rs  foundation.rs  mod.rs  stock.rs  tableaux.rs  talon.rs
src/model/: area_list.rs  card.rs  dealer.rs  deck.rs  game.rs  mod.rs  settings.rs  stack.rs
src/model/area/: area_list.rs  foundation.rs  mod.rs  stock.rs  tableaux.rs  talon.rs
src/model/game/: area.rs  foundation.rs  mod.rs  settings.rs  stock.rs  tableaux.rs  talon.rs
src/utils/: bounds.rs  coords.rs  format_str.rs  mod.rs  str.rs  tuple.rs  usize.rs  vec.rs
