[package]
name = "klondike-rs"
version = "0.1.0"
authors = ["Chris Bouchard <chris@upliftinglemma.net>"]
edition = "2018"

[dependencies]
failure = "*"
failure_derive = "*"
log = "*"
rand = "*"
simplelog = "*"
termion = "1"

[lib]
name = "klondike_lib"
path = "src/lib.rs"

[[bin]]
name = "klondike"
path = "src/main.rs"
