[package]
name = "klondike-rs"
version = "0.1.0"
authors = ["Chris Bouchard <chris@upliftinglemma.net>"]
edition = "2018"

description = "CLI Klondike Solitaire written in Rust"
categories = ["games"]
license = "MIT"
repository = "http://github.com/chrisbouchard/klondike-rs"
readme = "README.md"

[dependencies]
failure = "0.1"
failure_derive = "0.1"
log = "0.4"
rand = "0.6"
simplelog = "0.5"
termion = "1"

[lib]
name = "klondike_lib"
path = "src/lib.rs"

[[bin]]
name = "klondike"
path = "src/main.rs"
