[package]
name = "klondike-rs"
version = "1.0.2-alpha.0"
authors = ["Chris Bouchard <chris@upliftinglemma.net>"]
edition = "2018"

description = "CLI Klondike Solitaire written in Rust"
categories = ["games"]
license = "MIT"
repository = "http://github.com/chrisbouchard/klondike-rs"
readme = "README.md"

[dependencies]
config = "~0.9"
derive_more = "~0.15"
directories = "~2.0"
euclid = "~0.20"
itertools = "~0.8"
lazy_static = "~1.4"
log = "~0.4"
log-panics = "~2.0"
num_enum = "~0.2"
num-traits = "~0.2"
rand = "~0.6"
simplelog = "~0.5"
serde = { version = "~1.0", features = ["derive"] }
snafu = "~0.4"
termion = "~1.5"

[lib]
name = "klondike_lib"
path = "src/lib.rs"

[[bin]]
name = "klondike"
path = "src/main.rs"
